# pos-tagger

./: .gitignore  LICENSE  README.org  pos-tagger.cabal  stack.yaml
src/: Main.hs
src/Lib/: Fitness.hs  Genetic.hs  Parser.hs  Prototype.hs  Utils.hs
test/: #Spec.hs#  Spec.hs
