name:                pos-tagger
version:             0.1
synopsis:            Simple project to implement pos-tagger
description:         Please see README.md
homepage:            http://github.com/5hanth
license:             OtherLicense
license-file:        LICENSE
author:              Shanthakumar
maintainer:          sh4nth@gmail.com
copyright:           2016 Shanthakumar
category:            NLP
build-type:          Simple
cabal-version:       >=1.10

executable pos-tagger-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       text,
                       bytestring,
                       regex-compat,
                       regex-posix,
                       multiset,
                       bifunctors,
                       random-extras,
                       random-fu,
                       random-source,
                       stm,
                       lens,
                       pcre-utils,
                       either-unwrap,
                       transformers

  exposed-modules:   Lib.Fitness,
                     Lib.Genetic,
                     Lib.Parser,
                     Lib.Prototype,
                     Lib.Utils
  ghc-options:       -O2 -rtsopts -threaded -fexcess-precision -j6 +RTS -N12 -RTS -fsimpl-tick-factor=1000 -funfolding-use-threshold=1000 -funfolding-creation-threshold=1000

                       
test-suite POSTestSuite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       pos-tagger, bytestring
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  ghc-options:         -O2 -rtsopts -threaded -fexcess-precision -j6 +RTS -N12 -RTS -fsimpl-tick-factor=1000 -funfolding-use-threshold=1000 -funfolding-creation-threshold=1000
  default-language:    Haskell2010
